[project]
name = "llm-wiki"
version = "0.1.0"
description = "A personal knowledge base maintained by LLM agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["wiki", "knowledge-base", "llm", "obsidian"]

[project.urls]
Repository = "https://github.com/TrueHOOHA/LLM-Wiki-Skilled"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
